# correlation_based_feature_selection

./: README.md  pyproject.toml
examples/: madelon.py
src/correlation_based_feature_selection/: __init__.py  cfs.py  information_measures.py  prioqueue.py
tests/: test_cfs.py  test_greeter.py  test_information_measures.py
